Efmub-Ogy/src/objects/Process_and_Procedures__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Procedure_Change_Notes__c</fullName>
        <label>Procedure Change Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Link__c</fullName>
        <label>Reference Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>Usage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>When_to_use_this_process__c</fullName>
        <label>When to use this process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Process and Procedures</label>
    <pluralLabel>Process and Procedures</pluralLabel>
</CustomObject>